--- a/styleindex.css
+++ b/styleindex.css
@@ -137,6 +137,7 @@ header {
   height: 100vh;
   display:flex;
   align-items: center;
+  justify-content: center;
   padding: 0 10%;
   overflow: hidden;
 }
